--- a/FRONTEND/src/app/app.component.html
+++ b/FRONTEND/src/app/app.component.html
@@ -1,5 +1,9 @@
-
-<app-navbar/>
-
-<router-outlet/>
-
+<div class="flex h-screen w-full">
+    <nav> 
+        <app-navbar/>
+    </nav>
+    
+    <main class="flex-grow bg-gray-100"> 
+        <router-outlet/>
+    </main>
+</div>
