--- a/FRONTEND/src/app/navbar/navbar.component.html
+++ b/FRONTEND/src/app/navbar/navbar.component.html
@@ -37,7 +37,7 @@
                 <a routerLink="/" class="block w-full">Profile</a>
             </li>
             <li class="py-2 hover:bg-slate-400 cursor-pointer">
-                <a routerLink="/" class="block w-full">Support</a>
+                <a routerLink="/" class="block w-full">Setting</a>
             </li>
         </ul>
     </div>
